# backups-to-local-and-cloud

./: .gitignore  Makefile  README.md  backup.py  pyproject.toml  restore.py  sample.servers.yaml  verify.py
src/: backup.py  restore.py  utils.py  verify.py
